test/asm/empty-strings.err
warning: Treating strings as numbers is deprecated; use character literals or `CHARVAL` instead [-Wobsolete]
    at empty-strings.asm(5)
error: Strings as numbers must be a single charmap unit
    at empty-strings.asm(5)
Assembly aborted with 1 error!
